--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 aoc-main = { version = "0.5.0", features = ["bench"] }
 aoc-parse = "0.1.9"
+num-modular = "0.5.1"
+rayon = "1.6.1"
